# air-quality-sensor-arduino-nanoiot-fw

./: Cargo.toml  LICENSE.txt  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: main.rs
